<resources>
    <string name="app_name">The Movie Db</string>
    <string name="movies_placeholder">Start typing in a search bar to find a movie</string>
    <string name="error_unknown_on_download">Unexpected error while trying to fetch movies!</string>
    <string name="search_error">Something went wrong when downloading videos. Please, check your connection and try again</string>
    <string name="empty_result">No results matching your query</string>
    <string name="content_cinema_poster">Cinema poster</string>
    <string name="hint_search_query">Enter search query…</string>
    <string name="search_icon">Search icon</string>

    <string name="movie_details_title">Movie: %1$d, %2$s</string>
    <string name="movie_details_back_btn">back</string>

    <string name="email">E-mail</string>
    <string name="auth">Auth</string>
    <string name="password">Password</string>
    <string name="email_input_error">Invalid email</string>
    <string name="password_input_error">Invalid password</string>
    <string name="invalid_user_credentials">Invalid user credentials</string>
    <string name="unknown_error">Unknown error</string>
    <!--Review-->

    <string name="review_button_rate_movie">Leave you review</string>
    <string name="review_what_did_you_like">What did you like?</string>
    <string name="review_what_did_not_like">What you did not like?</string>
    <string name="review_rating_message">Rate movie:</string>
    <string name="review_button_next">Next</string>
    <string name="review_button_submit">Submit</string>

    <string name="review_error_unknown">Something gone wrong</string>
    <string name="review_error_zero_rating">You should select rating</string>
    <string name="review_error_should_not_be_empty">Field should not be empty</string>
    <string name="review_rate_placeholder">Rate \"%1$s\"</string>
    <string name="review_liked_placeholder">Like: \"%1$s\"</string>
    <string name="review_not_liked_placeholder">Didn\'t like: \"%1$s\"</string>
    <string name="movie_details_rating">Rating:</string>
    <string name="review_add_label">Add review</string>
    <string name="authiorize_to_add_review_label">Click to Autorize to add review</string>
    <string name="review_my_review">My review</string>
    <string name="error_getting_movie_info">Error getting movie information!</string>

</resources>
