<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerReviewSummary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivMovieThumbnail"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:contentDescription="@string/content_cinema_poster"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="2:3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ph_movie_grey_200" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/space_normal" />

    <TextView
        android:id="@+id/tvRateMovieMessage"
        style="@style/ReviewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_normal"
        android:layout_marginTop="@dimen/space_normal"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@id/ivMovieThumbnail"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Rate movie {Movie Title}" />

    <TextView
        android:id="@+id/tvWhatLike"
        style="@style/ReviewSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tvWhatNotLike"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/tvRateMovieMessage"
        app:layout_constraintTop_toBottomOf="@id/tvRateMovieMessage"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/review_liked_placeholder" />

    <TextView
        android:id="@+id/tvWhatNotLike"
        style="@style/ReviewSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/tvRateMovieMessage"
        app:layout_constraintTop_toBottomOf="@+id/tvWhatLike"
        tools:text="@string/review_not_liked_placeholder" />


</androidx.constraintlayout.widget.ConstraintLayout>

